<?xml version="1.0"?>
<package format="2">
  <name>rover_frontend</name>
  <version>1.0.0</version>
  <description>The rover_frontend package</description>

  <maintainer email="rhongoimiant@todo.todo">rhongoimiant</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
